feat(document): 添加文档重新处理功能和RAG检索一致性检测
- 新增 DOCUMENT_REPROCESS 审计动作类型
- 添加 DocumentController.reprocess 接口用于重新处理失败文档
- 实现 DocumentService.reprocessDocument 方法，支持ERROR状态文档重新解析
- 在前端DocumentDetailPanel组件中添加重新处理按钮
- 在DocumentsPage页面中添加行内重新处理功能
- 新增ErrorCode.DOCUMENT_INVALID_STATE 错误码
- 添加PythonVectorStorePlugin一致性检测相关字段和方法
- 实现ChatServiceImpl.calculateConsistencyScore一致性计算逻辑